[package]
authors = ["bus710"]
categories = ["embedded"]
description = "To drive Turtlebot2 (a.k.a Kobuki)."
edition = "2021"
license = "MIT"
name = "turtlebot2"
readme = "README.md"
repository = "https://github.com/bus710/turtlebot2"
version = "0.1.4"

[lib]
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.52"
derivative = "2.2.0"
itertools = "0.10.3"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
thiserror = "1.0.30"
